--- a/src/views/addBreed.html
+++ b/src/views/addBreed.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/styles/site.css">
     <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
+    <link rel="shortcut icon" href="https://img.icons8.com/ios-filled/50/000000/cat-footprint.png" type="image/png">
     <title>Cat Shelter</title>
 </head>
 
